# Numerics101

./: .gitignore  AssessmentTest.sln  AssessmentTest.vcxproj  AssessmentTest.vcxproj.filters  CMakeLists.txt  DirectSolver.cpp  GaussSeidelSolver.cpp  GaussSeidelSolver.h  JacobiSolver.cpp  Matrix.cpp  Matrix.h  README.md  SORSolver.cpp  Solver.cpp  Solver.h  Types.h  Vector.cpp  Vector.h  main.cpp  out.txt
Matrix/: CSRMatrix.cpp
Solver/: JacobiSolver.h
examples/heatEquation/: CMakeLists.txt  solveHeatEquation.cpp
examples/matrixOperations/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp
examples/petscSolver/: CMakeLists.txt  petscSolveParBlockCSR.cpp  petscSolveSerBlockCSR.cpp
include/: CSRMatrix.h  DirectSolver.h  GaussSeidelSolver.h  PetscSolver.h  PetscSolver.hpp  SORSolver.h
src/Matrix/: CSRMatrix.cpp  Matrix.cpp
src/Misc/: Types.h
src/Solver/: DirectSolver.cpp  PetscSolver.h  PetscSolver.hpp  Solver.cpp
src/Vector/: Vector.cpp
